add data component

--- a/src/app.html
+++ b/src/app.html
@@ -6,8 +6,8 @@
 		h2 {
 			color: white;
 			font-weight: 200 !important;
-			font-size: 20px !important;
-			margin-left: 10px !important;
+			font-size: 20px;
+			margin-left: 10px
 		}
 
 		h1 {
@@ -15,7 +15,7 @@
 			color: #30e9ff;
 			text-transform: uppercase;
 			letter-spacing: 2px;
-			margin-bottom: 20px !important;
+			margin-bottom: 20px;
 		}
 
 		section {
