--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>My app</title>
+	<title>VIZ Station</title>
 	<link rel="stylesheet" href="/bundle.css">
 	<script type="module" src='/bundle.js'>
 	</script>
