--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,40 @@
 <html lang="en">
 
 <head>
+	<style>
+		h2 {
+			color: white;
+			font-weight: 200 !important;
+			font-size: 20px;
+			margin-left: 10px
+		}
+
+		h1 {
+			text-align: center;
+			color: #30e9ff;
+			text-transform: uppercase;
+			letter-spacing: 2px;
+			margin-bottom: 20px;
+		}
+
+		section {
+			background-color: #1a1a1a;
+			height: 100%;
+			width: 100%;
+			padding: 20px;
+			border: 1.8px solid #30e9ff;
+			border-radius: 10px;
+			box-shadow: 0 0 16px rgba(0, 255, 65, 0.5);
+		}
+
+		.app-bar {
+			background-color: #1a1a1a !important;
+		}
+	</style>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>VIZ Station</title>
+	<title>My app</title>
 	<link rel="stylesheet" href="/bundle.css">
 	<script type="module" src='/bundle.js'>
 	</script>
